--- a/config/model.yaml
+++ b/config/model.yaml
@@ -1,4 +1,6 @@
-random_forest:
-  n_estimators: [50, 100, 200]
-  max_depth: [5, 10, 15, 20]
-  min_samples_split: [2, 5, 10]
+LinearRegression:
+  tol: [0.1, 0.01, 0.001]
+
+SVR:
+  kernel: [linear, poly]
+  degree: [3, 5, 7]
